test/parser/exercise/struct_in_assignment.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct S {}

fn main(): void {
  S {} = S {};
  // CHECK: [[# @LINE -1 ]]:3: error: expected variable on the LHS of an assignment
  // CHECK: [[# @LINE -2 ]]:14: error: expected expression
}
